# jomt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: colored_output.cmake  use_ccache.cmake
src/: benchmark_results.cpp  commandline_handler.cpp  main.cpp  mainwindow.cpp  plot_parameters.cpp  plotter_3dbars.cpp  plotter_3dsurface.cpp  plotter_barchart.cpp  plotter_boxchart.cpp  plotter_linechart.cpp  result_parser.cpp  result_selector.cpp  series_dialog.cpp
src/include/: benchmark_results.h  commandline_handler.h  mainwindow.h  plot_parameters.h  plotter_3dbars.h  plotter_3dsurface.h  plotter_barchart.h  plotter_boxchart.h  plotter_linechart.h  result_parser.h  result_selector.h  series_dialog.h
